Fix content overflow in sections caused by too wide pre tags

--- a/website/components/ArticleContent/styles.module.scss
+++ b/website/components/ArticleContent/styles.module.scss
@@ -3,7 +3,9 @@
 
 .articleContent {
   display: grid;
-  grid-template-columns: 20rem 1fr;
+  // NOTE: minmax(0, 1fr) is a bit hacky to prevent pre tags from overflowing
+  // SEE: https://css-tricks.com/preventing-a-grid-blowout/
+  grid-template-columns: 20rem minmax(0, 1fr);
   background-color: white;
 }
 
@@ -61,6 +63,7 @@
     padding-bottom: 1.5rem;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
+    max-width: 100%;
     overflow-x: auto;
     color-scheme: dark;
 
